# manaraga

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
src/: configs.py  fe.py
src/apis/: __init__.py  base.py  flightapi.py
src/services/: assistant.py  inmemory_cache.py  sessions.py
